# test3

./: .editorconfig  CMakeLists.txt  README.md  swift_build  vcpkg.json
src/: cmd_line_params.cxx  main.cpp  main.cxx
src/algorithm/: word_count.cxx
src/algorithm/checksum/: bit32.cxx
src/include/: cmd_line_params.hxx
src/include/algorithm/: word_count.hxx
src/include/algorithm/checksum/: bit32.hxx
src/include/modules/: checksum_module.hxx  i_module.hxx  module_executor.hxx  words_module.hxx
src/modules/: checksum_module.cxx  module_executor.cxx  words_module.cxx
